--- a/style.css
+++ b/style.css
@@ -54,4 +54,16 @@ body {
   font-weight: 700;
   line-height: 0rem; /* 0% */
   letter-spacing: 0.1rem;
+  padding-left: 1em;
+}
+
+button {
+  background-color: var(--purple);
+  border-radius: 50%;
+  padding: 1em;
+  cursor: pointer;
+}
+
+.results {
+  font-size: 5em;
 }
