--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+@font-face {
+  font-family: 'Poppins-ItalicBold';
+  src: url(./assets/fonts/Poppins-ExtraBoldItalic.ttf);
+}
+@font-face {
+  font-family: 'Poppins-Regular';
+  src: url(./assets/fonts/Poppins-Regular.ttf);
+}
+@font-face {
+  font-family: 'Poppins-ExtraBold';
+  src: url(./assets/fonts/Poppins-ExtraBold.ttf);
+}
+
+@font-face {
+  font-family: 'Poppins-Italic';
+  src: url(./assets/fonts/Poppins-Italic.ttf);
+}
+
+@font-face {
+  font-family: 'Poppins-Bold';
+  src: url(./assets/fonts/Poppins-Bold.ttf);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -16,59 +39,106 @@
 
 body {
   background-color: var(--off-white);
-  width: 90rem;
-  height: 60rem;
-  padding: 8.25rem 17rem;
+  padding: 10% 15%;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .container {
   border-radius: 2rem 2rem 15rem 2rem;
   background: #fff;
-  width: 56rem;
-  height: 43.5rem;
+  max-width: 50em;
+  max-height: 41rem;
+  padding: 4em 3.5em 7em 3.5em;
 }
 
 .inputs {
-  width: 35.875rem;
-  height: 5.875rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  width: 75%;
 }
 
-.date input,
-.month input,
-.year input {
-  border-radius: 0.4375rem;
-  border: 1px solid rgba(113, 111, 111, 0.44);
-  background: #fff;
-  width: 10.5rem;
-  height: 4.6875rem;
-  color: #000;
-  font-family: Poppins;
-  font-size: 2rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 0rem; /* 0% */
-  letter-spacing: 0.1rem;
-  padding-left: 1em;
+.input {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% / 3);
 }
 
-button {
-  background-color: var(--purple);
-  border-radius: 50%;
-  padding: 1em;
-  cursor: pointer;
-  margin: 2em;
+.input label {
+  font-family: 'Poppins-Regular', sans-serif;
+  letter-spacing: 0.2rem;
+  color: var(--smokey-grey);
+  font-size: 0.9em;
 }
 
-.results {
-  font-size: 5em;
+.input input {
+  border-radius: 0.2em;
+  border: 1px solid var(--smokey-grey);
+  width: 80%;
+  color: black;
+  padding: 0.5em 0.75em;
+  font-size: 1.6em;
+  margin: 3px 0;
+  font-family: 'Poppins-Bold';
+}
+
+.input p {
+  font-family: 'Poppins-Italic', sans-serif;
+  font-size: 0.8em;
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+input::placeholder {
+  font-family: 'Poppins-Bold';
+  color: var(--light-grey);
 }
 
 .error {
+  margin-top: 0.5em;
   color: var(--light-red);
+  font-size: 0.8em;
 }
+
+.button-line {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1em 0;
+}
+
+.button-line button {
+  width: 6em;
+  height: 6em;
+  border-radius: 50%;
+  background-color: var(--purple);
+  border: none;
+  cursor: pointer;
+}
+
+.line1 {
+  border-radius: 10%;
+  background-color: var(--smokey-grey);
+  height: 2px;
+  width: 90%;
+}
+
+.results {
+  font-family: 'Poppins-ItalicBold';
+  font-size: 4.75em;
+}
+
+.results span {
+  color: var(--purple);
+}
+
